--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <section class="text-center mb-16">
             <h2 class="text-3xl font-extrabold mb-6">Why Choose Us?</h2>
             <ul class="space-y-3">
-                <li>✅ Join 15,000+ Young Traders & Start Earning Daily!</li>
+                <li>✅ Join 1500 Young Traders & Start Earning Daily!</li>
                 <li>🔹 Free Trading Funds – Get started instantly with zero risk!</li>
                 <li>🔹 Expert Trading Calls – High-accuracy tips provided daily.</li>
                 <li>🔹 No Experience Needed – We guide you step by step.</li>
