--- a/index.html
+++ b/index.html
@@ -110,10 +110,15 @@
     </footer>
     <div>
     </div>
-    <script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "qhh4f4x23x");
         function contactUs() {
-            window.location.href = "https://wa.link/m28rc2";
-        }
+    window.location.href = "https://wa.link/m28rc2";
+}
     </script>
 </body>
 </html>
