All things are settled

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <script>
         function contactUs() {
-            window.location.href = "https://wa.link/m28rc2";
+            window.location.href = "https://wa.link/hk68ck";
         }
     </script>
     </script>
