--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Earn Without Investment</title>
-    <link rel="icon" href="https://example.com/logo.png" type="image/png" />
+    <link rel="icon" href="https://example.com/logo.png" type="image/png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon/favicon-96x96.png">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -20,6 +26,9 @@
             font-family: 'Open Sans', sans-serif;
         }
     </style>
+
+
+
 
         <!-- Meta Pixel Code -->
         <script>
