--- a/index.html
+++ b/index.html
@@ -97,6 +97,27 @@
             </div>
         </section>
 
+             <!-- Customer Reviews Section -->
+             <section class="text-center mb-16">
+                <h2 class="text-3xl font-extrabold mb-6">Customer Reviews🌟</h2>
+                <div class="relative w-full max-w-2xl mx-auto overflow-hidden rounded-xl shadow-lg">
+                    <div class="flex transition-transform duration-1000 ease-in-out" id="slider">
+                        <img src="/SCREENSHOTS/IMG1 (2).PNG" alt="Customer Review 1" class="w-full h-auto flex-shrink-0">
+                        <img src="/SCREENSHOTS/IMG2.PNG" alt="Customer Review 2" class="w-full h-auto flex-shrink-0">
+                        <img src="/SCREENSHOTS/IMG3 (2).PNG" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
+                        <img src="/SCREENSHOTS/IMG4.PNG" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
+                        <img src="/SCREENSHOTS/IMG5.PNG" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
+                        <img src="/SCREENSHOTS/IMG6.png" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
+
+                    </div>
+                </div>
+                <div class="flex justify-center mt-10">
+                    <button onclick="contactUs()" class="border border-white text-white py-2 px-6 rounded-md text-base font-semibold hover:bg-white hover:text-black transition">
+                        Contact Us
+                    </button>
+                </div>
+            </section>
+
         <img src="image-one.png" alt="" class="w-full h-auto rounded-xl shadow-lg">
 
         <section class="text-center mb-16">
