Some changes made

--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
                 <h2 class="text-3xl font-extrabold mb-6">Customer Reviews🌟</h2>
                 <div class="relative w-full max-w-2xl mx-auto overflow-hidden rounded-xl shadow-lg">
                     <div class="flex transition-transform duration-1000 ease-in-out" id="slider">
-                        <img src="/SCREENSHOTS/IMG1 (2).PNG" alt="Customer Review 1" class="w-full h-auto flex-shrink-0">
-                        <img src="/SCREENSHOTS/IMG2.PNG" alt="Customer Review 2" class="w-full h-auto flex-shrink-0">
-                        <img src="/SCREENSHOTS/IMG3 (2).PNG" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
-                        <img src="/SCREENSHOTS/IMG4.PNG" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
-                        <img src="/SCREENSHOTS/IMG5.PNG" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
-                        <img src="/SCREENSHOTS/IMG6.png" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
+                        <img src="./SCREENSHOTS/IMG1 (2).PNG" alt="Customer Review 1" class="w-full h-auto flex-shrink-0">
+                        <img src="./SCREENSHOTS/IMG2.PNG" alt="Customer Review 2" class="w-full h-auto flex-shrink-0">
+                        <img src="./SCREENSHOTS/IMG3 (2).PNG" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
+                        <img src="./SCREENSHOTS/IMG4.PNG" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
+                        <img src="./SCREENSHOTS/IMG5.PNG" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
+                        <img src="./SCREENSHOTS/IMG6.png" alt="Customer Review 3" class="w-full h-auto flex-shrink-0">
 
                     </div>
                 </div>
