All things sorted

--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
         <h2 class="text-3xl font-extrabold mb-6">Customer Reviews🌟</h2>
         <div class="slider-container">
             <div class="slider" id="slider">
-                <img src="./SCREENSHOTS/IMG1 (2).PNG" alt="Customer Review 1">
-                <img src="./SCREENSHOTS/IMG2.PNG" alt="Customer Review 2">
-                <img src="./SCREENSHOTS/IMG3 (2).PNG" alt="Customer Review 3">
-                <img src="./SCREENSHOTS/IMG4.PNG" alt="Customer Review 4">
-                <img src="./SCREENSHOTS/IMG5.PNG" alt="Customer Review 5">
-                <img src="./SCREENSHOTS/IMG6.png" alt="Customer Review 6">
+                <img src="./SCREENSHOTS/img11.PNG" alt="Customer Review 1">
+                <img src="./SCREENSHOTS/img22.png" alt="Customer Review 2">
+                <img src="./SCREENSHOTS/img33.PNG" alt="Customer Review 3">
+                <img src="./SCREENSHOTS/img44.PNG" alt="Customer Review 4">
+                <img src="./SCREENSHOTS/img55.PNG" alt="Customer Review 5">
+                <img src="./SCREENSHOTS/img66.PNG" alt="Customer Review 6">
             </div>
         </div>
         <div class="flex justify-center mt-10">
