--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                 <li class="bg-gray-900 p-8 rounded-2xl shadow-xl text-center w-full sm:w-2/5">
                     <p class="font-bold text-base mb-4">STEP 1: Getting Started 🎬</p>
                     <audio controls class="w-full">
-                        <source src="AAFREEN STEP 1.mpeg" type="audio/mpeg" />
+                        <source src="AAFREEN STEP 1.mp3" type="audio/mp3" />
                         Your browser does not support the audio element.
                     </audio>
                 </li>
                 <li class="bg-gray-900 p-8 rounded-2xl shadow-xl text-center w-full sm:w-2/5">
                     <p class="font-bold text-base mb-4">STEP 2: Building Knowledge 📚</p>
                     <audio controls class="w-full">
-                        <source src="AAFREEN STEP2.mpeg" type="audio/mpeg" />
+                        <source src="AAFREEN STEP2.mp3" type="audio/mp3" />
                         Your browser does not support the audio element.
                     </audio>
                 </li>
