--- a/index.html
+++ b/index.html
@@ -17,33 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon/favicon-96x96.png">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            font-size: 0.75rem;
-        }
-        h1, h2, h3, h4, h5, h6 {
-            font-family: 'Open Sans', sans-serif;
-        }
-
-        .slider-container {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    max-width: 2xl;
-    margin: 0 auto;
-}
-
-.slider {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-}
-
-.slider img {
-    width: 100%;
-    flex-shrink: 0;
-}
-    </style>
+    <link rel="stylesheet" href="style.css">
 
 
 <!-- Snap Pixel Code -->
@@ -96,14 +70,14 @@
                 <li class="bg-gray-900 p-8 rounded-2xl shadow-xl text-center w-full sm:w-2/5">
                     <p class="font-bold text-base mb-4">STEP 1: Getting Started 🎬</p>
                     <audio controls class="w-full">
-                        <source src="AAFREEN-STEP-1.mp3" type="audio/mp3" />
+                        <source src="AAFREEN STEP 1.mp3" type="audio/mp3" />
                         Your browser does not support the audio element.
                     </audio>
                 </li>
                 <li class="bg-gray-900 p-8 rounded-2xl shadow-xl text-center w-full sm:w-2/5">
                     <p class="font-bold text-base mb-4">STEP 2: Building Knowledge 📚</p>
                     <audio controls class="w-full">
-                        <source src="AAFREEN-STEP2.mp3" type="audio/mp3" />
+                        <source src="AAFREEN STEP 2.mp3" type="audio/mp3" />
                         Your browser does not support the audio element.
                     </audio>
                 </li>
