New number added

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <script>
         function contactUs() {
-            window.location.href = "https://wa.link/hk68ck";
+            window.location.href = "https://wa.link/j5f7dm";
         }
 
         const slider = document.getElementById('slider');
