New things added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main class="p-6 max-w-4xl mx-auto">
         <h1 class="text-4xl font-extrabold text-center my-8 text-white">Welcome to Zero Investment Online Earning</h1>
         <section class="audio-library mb-16">
-            <h2 class="text-2xl font-extrabold text-center mb-8">Listen to Important Audio Lessons to Understand Work Properly⬇️⬇️🎧 </h2>
+            <h2 class="text-2xl font-extrabold text-center mb-8 mb-10">Listen to Important Audio Lessons to Understand Work Properly⬇️⬇️🎧 </h2>
             <ul class="flex flex-col sm:flex-row gap-8 justify-center">
                 <li class="bg-gray-900 p-8 rounded-2xl shadow-xl text-center w-full sm:w-2/5">
                     <p class="font-bold text-base mb-4">STEP 1: Getting Started 🎬</p>
@@ -208,7 +208,7 @@
 
     <script>
         function contactUs() {
-            window.location.href = "https://wa.link/j5f7dm";
+            window.location.href = "https://wa.link/vm9dyl";
         }
 
         const slider = document.getElementById('slider');
