New number added

--- a/index.html
+++ b/index.html
@@ -208,9 +208,10 @@
 
     <script>
         function contactUs() {
-            window.location.href = "https://wa.link/vm9dyl";
+            window.location.href = "https://wa.link/x576ir";
         }
 
+        
         const slider = document.getElementById('slider');
 let index = 0;
 let touchStartX = 0;
