new number added

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     <script>
         function contactUs() {
-            window.location.href = "https://wa.link/x576ir";
+            window.location.href = "https://wa.link/7bnpcn";
         }
 
         
