New number added

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
         // Function to handle "Yes" button click
         function handleYes() {
-            window.location.href = "https://wa.link/o51217"; // Redirect to WhatsApp
+            window.location.href = "https://wa.link/f66qxk"; // Redirect to WhatsApp
             const modal = document.getElementById('audioConfirmationModal');
             modal.classList.add('hidden');
         }
