--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
         // Function to handle "Yes" button click
         function handleYes() {
-            window.location.href = "https://wa.link/gfqyx0";
+            window.location.href = "https://wa.link/0w0ywo";
             const modal = document.getElementById('audioConfirmationModal');
             modal.classList.add('hidden');
         }
