New thing added

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
         // Function to handle "Yes" button click
         function handleYes() {
-            window.location.href = "https://wa.link/k4v3x9";
+            window.location.href = "http://wa.link/bdbpk0";
             const modal = document.getElementById('audioConfirmationModal');
             modal.classList.add('hidden');
         }
