new number added

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
 
         // Function to handle "Yes" button click
         function handleYes() {
-            window.location.href = "http://wa.link/bdbpk0";
+            window.location.href = "http://wa.link/9hahri";
+            
             const modal = document.getElementById('audioConfirmationModal');
             modal.classList.add('hidden');
         }
