New added ayesha

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
         // Function to handle "Yes" button click
         function handleYes() {
-            window.location.href = "http://wa.link/9hahri";
+            window.location.href = "http://wa.link/7fvbxg";
             
             const modal = document.getElementById('audioConfirmationModal');
             modal.classList.add('hidden');
