--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
         // Function to handle "Yes" button click
         function handleYes() {
-            window.location.href = "http://wa.link/7fvbxg";
+            window.location.href = "https://api.whatsapp.com/send?phone=917017439917";
             
             const modal = document.getElementById('audioConfirmationModal');
             modal.classList.add('hidden');
