new number added

--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
         <h2 class="text-3xl font-extrabold mb-6">Customer Reviews🌟🌟</h2>
         <div class="slider-container">
             <div class="slider" id="slider">
-                <img src="./SCREENSHOTS/img11.PNG" alt="Customer Review 1">
-                <img src="./SCREENSHOTS/img22.png" alt="Customer Review 2">
-                <img src="./SCREENSHOTS/img33.PNG" alt="Customer Review 3">
-                <img src="./SCREENSHOTS/img44.PNG" alt="Customer Review 4">
-                <img src="./SCREENSHOTS/img55.PNG" alt="Customer Review 5">
-                <img src="./SCREENSHOTS/img66.PNG" alt="Customer Review 6">
+                <img src="./SCREENSHOTS/IMG_01.PNG" alt="Customer Review 1">
+                <img src="./SCREENSHOTS/IMG_02.PNG" alt="Customer Review 2">
+                <img src="./SCREENSHOTS/IMG_03.PNG" alt="Customer Review 3">
+                <img src="./SCREENSHOTS/IMG_04.PNG" alt="Customer Review 4">
+                <img src="./SCREENSHOTS/IMG_05.PNG" alt="Customer Review 5">
+                <img src="./SCREENSHOTS/IMG_06.PNG" alt="Customer Review 6">
+                <img src="./SCREENSHOTS/IMG_07.PNG" alt="Customer Review 6">
             </div>
         </div>
 
@@ -131,14 +132,14 @@
         <img src="image-one.png" alt="" class="w-full h-auto rounded-xl shadow-lg">
 
         <section class="text-center mb-16">
-            <h2 class="text-3xl font-extrabold mb-6">Start Trading & Earn Daily – No Experience Needed!</h2>
-            <p class="leading-relaxed mb-6">Want to earn money daily without any investment? We help you start your trading journey with FREE FUNDS and expert guidance!</p>
+            <h2 class="text-3xl font-extrabold mb-6">📢 Help Others Start & Get Rewarded – No Experience Needed!</h2>
+            <p class="leading-relaxed mb-6">Want to earn money daily without any investment? We help you grow your income by guiding others — and you get rewarded for every successful start!</p>
             <ul class="mt-6 space-y-3">
-                <li>✅ Get ₹2000 Daily</li>
-                <li>✅ Access Expert Trading Calls & Strategies</li>
+                <li>✅ Earn ₹2000 or more Daily</li>
+                <li>✅ We Provide Leads + Full Training Support</li>
                 <li>✅ Start Earning Daily – No Experience Needed!</li>
             </ul>
-            <p class="mt-8 font-bold text-xl">🎯 Join Thousands of Young Traders Making Money Online!</p>
+            <p class="mt-8 font-bold text-xl">🎯 Join Thousands of Smart Individuals Earning Weekly!</p>
         </section>
 
         <img src="image-two.png" alt="" class="w-full h-auto rounded-xl shadow-lg">
@@ -146,13 +147,13 @@
         <section class="text-center mb-16">
             <h2 class="text-3xl font-extrabold mb-6">Why Choose Us?</h2>
             <ul class="space-y-3">
-                <li>✅ Join 1500+ Young Traders & Start Earning Daily!</li>
-                <li>🔹 Free Trading Funds – Get started instantly with zero risk!</li>
-                <li>🔹 Expert Trading Calls – High-accuracy tips provided daily.</li>
-                <li>🔹 No Experience Needed – We guide you step by step.</li>
-                <li>🔹 Easy Withdrawals – Transfer your earnings directly to your bank account.</li>
+                <li>✅ Join 1500+ Young Earners & Start Getting Paid Weekly!</li>
+                <li>🔹 Zero Investment Needed – Just help others get started and earn in return.</li>
+                <li>🔹 We Provide Leads – You’re not doing this alone!</li>
+                <li>🔹Step-by-Step Guidance – From setup to success, we’re with you at every step..</li>
+                <li>🔹 Weekly Payments – Get your earnings directly in your bank account.</li>
             </ul>
-            <p class="mt-8 font-bold text-xl">💰 1500+ young traders are already making money – Why not you?</p>
+            <p class="mt-8 font-bold text-xl">💰 1500+ students and job-seekers are already earning consistently</p>
         </section>
 
         <img src="image-three.png" alt="" class="w-full h-auto rounded-xl shadow-lg">
