new audios added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <p class="font-bold text-base mb-4">STEP 1: Getting Started 🎬</p>
                     <p id="loading1" class="text-yellow-400">Loading...</p> <!-- Loading text -->
                     <audio id="audio1" controls class="w-full" disabled>
-                        <source src="AAFREEN STEP 1.mp3" type="audio/mp3" />
+                        <source src="AUDIO_001.mp3" type="audio/mp3" />
                         Your browser does not support the audio element.
                     </audio>
                 </li>
@@ -82,7 +82,7 @@
                     <p class="font-bold text-base mb-4">STEP 2: Building Knowledge 📚</p>
                     <p id="loading2" class="text-yellow-400">Loading...</p> <!-- Loading text -->
                     <audio id="audio2" controls class="w-full" disabled>
-                        <source src="AAFREEN STEP 2.mp3" type="audio/mp3" />
+                        <source src="AUDIO_002.mp3" type="audio/mp3" />
                         Your browser does not support the audio element.
                     </audio>
                 </li>
