--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
        <!-- Customer Reviews Section -->
        <section class="text-center mb-16">
-        <h2 class="text-3xl font-extrabold mb-6">Customer Reviews🌟🌟</h2>
+        <h2 class="text-3xl font-extrabold mb-6">Client Reviews🌟🌟</h2>
         <div class="slider-container">
             <div class="slider" id="slider">
                 <img src="./SCREENSHOTS/IMG_01.PNG" alt="Customer Review 1">
