--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ src="https://www.facebook.com/tr?id=886154463717364&ev=PageView&noscript=1"
                     <p class="font-bold text-base mb-4">STEP 2: Building Knowledge 📚</p>
                     <p id="loading2" class="text-yellow-400">Loading...</p> <!-- Loading text -->
                     <audio id="audio2" controls class="w-full" disabled>
-                        <source src="AUDIO_002.mp3" type="audio/mp3" />
+                        <source src="telegram audio (1).mp3" type="audio/mp3" />
                         Your browser does not support the audio element.
                     </audio>
                 </li>
