--- a/index.html
+++ b/index.html
@@ -232,10 +232,8 @@ src="https://www.facebook.com/tr?id=886154463717364&ev=PageView&noscript=1"
 
         // Function to handle "Yes" button click
         function handleYes() {
- fbq('track', 'Lead', {
-        value: 100.00,
-        currency: 'INR'
-    });
+fbq('track', 'Lead');
+
 
 
             window.location.href = "https://t.me/ankitkumars2002";
