--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@ fbq('track', 'Lead');
 
 
 
-            window.location.href = "https://t.me/ankitkumars2002";
+            window.location.href = "https://api.whatsapp.com/send?phone=917696145836"
+            //"https://t.me/ankitkumars2002";
             
             const modal = document.getElementById('audioConfirmationModal');
             modal.classList.add('hidden');
